fixed some citations and started proof reading

--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -40,7 +40,7 @@ Deirdre Loughnan$^{5}$, E.M. Wolkovich$^{2,3,5}$}
 \maketitle
 
 \noindent \emph{Author affiliations:}\\
-\noindent $^1$Department of Plant Science and Landscape Architechture, University of Maryland, College Park, Maryland, USA. ORCID: 0000-0003-4022-2591\\
+\noindent $^1$Department of Plant Science and Landscape Architecture, University of Maryland, College Park, Maryland, USA. ORCID: 0000-0003-4022-2591\\
 \noindent $^2$Arnold Arboretum of Harvard University, Boston, Massachusetts, USA.\\
 $^3$Department of Organismic and Evolutionary Biology, Harvard University, Cambridge, Massachusetts, USA \\
 $^4$The Nature Conservancy, Cat should add, USA \\
@@ -167,12 +167,12 @@ gs.sig.pop.h<-round(pop_sigma_gs[1,3],2)
 
 \section{Abstract}
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
-The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. Most models of carbon storage assume that earlier seasons will result in longer seasons and thereby enhance forest carbon storage, however current findings have called in to question this assumption.
+The extension of the growing season in the spring in temperate regions is one the most prominent biological indicators of climate change. Most models of carbon storage assume that earlier seasons will result in longer seasons and thereby enhance forest carbon storage, however current findings have challenged this assumption.
 
-A recent hypothesis that has gained support in the literature is that plants dynamically adjust the end of their growing season based on their carbon-sink capacity, such that longer seasons do not increase total productivity. If this is the case, variation in the calendar growing season (number of days) should be independent of variation in the period of favorable meteorological conditions for plant growth (i.e., the thermal growing season), which should remain relatively stable across years. % emwJuly22: I really like this but we need to mirror the language below for the readers. Right now a reader cannot follow how the 'unexpected trade-off' relates to this. We probably need to move and change the language below of 'This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity.' 
-We tested this prediction using rarely available plant-scale phenological measurements from a three year common garden experiment that included 18 woody species native to the Eastern United States from four populations of origin. 
+A recent hypothesis that has gained support in the literature is that plants dynamically adjust the end of their growing season based on their carbon-sink capacity, such that longer seasons do not increase total productivity. If this is the case, variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season (i.e., the period of favorable meteorological conditions for plant growth), which should remain relatively stable across years. % emwJuly22: I really like this but we need to mirror the language below for the readers. Right now a reader cannot follow how the 'unexpected trade-off' relates to this. We probably need to move and change the language below of 'This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity.' 
+We tested this prediction using rarely available plant-scale phenological measurements from a three year common garden experiment. The garden included 18 woody species, native to the Eastern United States from four populations of origin. 
 
-We found an unexpected trade-off between early calendar growing seasons and thermal growing seasons, in which later leafout in calendar time resulted in a longer thermal growing season---a relationship that was strongest in early-leafing species. At the community level, earlier leafout was correlated with earlier budset, resulting in a relatively stable calendar growing period over the three years. 
+We found an unexpected trade-off between early calendar growing seasons and thermal growing seasons in which delayed leafout in calendar time resulted in a longer thermal growing season---a relationship that was strongest in early-leafing species. At the community level, earlier leafout was correlated with earlier budset, resulting in a relatively stable calendar growing period over the three years. 
 % emwJuly22: If we keep the below sentence we need to spell it out more easily for readers. 
 Earlier leafout may have little advantage to the thermal growing season because early lower temperature are less favorable for photosynthesis, and the correlation between leafout and budset suggest early individuals will miss out on later-season conditions more favorable for photosynthesis. This relationship may explain some of the contrasting results of how climate change affects growing season length and productivity. This study shows linking phenological growing seasons to carbon storage requires integrating existing ecosystem measures with phenological variation at multiple scales, and that progress will require more efforts to understand and model species-level shifts in phenology.
 
@@ -183,12 +183,12 @@ Terrestrial forests currently sequester 20\% of greenhouse gas emissions annuall
 %emwNov4 -- I would love to get Cat's help on citations in this paragraph (and throughout). I have offered some, but her ideas would be better.
 Some of this uncertainty may stem from the fact that there are multiple ways to measure the growing season \citep{Korner2023}. The most common is calendar time (i.e., the number of days between the start and end of the growing season). Observations have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but other studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}. % emwJuly22: The contrast in the sentence above needs a smidge of work -- you contrast 'observations' versus 'other studies' so it needs to either be 'some studies ... other studies' (or 'earlier studies... recent studies') or (better) contrast methods (ground observations vs satellites and experiments, or such ... actually, if possible, this would place to refer to scale issues). 
 
-The thermal growing season---defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is also widely used, most commonly in the metric of growing degree days, a temperature derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,Moore:2014wl,YANG199561}. Because plant photosynthetic rates increase with temperature increases \citep{Farquhar:1980vm}, from the cool spring to warm summers in the temperate zone, the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Importantly, depending on the temperature over the course of a growing season, years with substantially different calendar growing seasons can have very similar thermal growing seasons, or \emph{vice versa}.
+The thermal growing season---defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is also widely used, most commonly in the metric of growing degree days, a temperature derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,Moore:2014wl,YANG199561}. Because plant photosynthetic rates increase with temperature \citep{Farquhar:1980vm} the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Importantly, depending on the temperature over the course of a growing season, years with substantially different calendar growing seasons can have very similar thermal growing seasons, or \emph{vice versa}.
 
 Recent work has suggested early, increased productivity in the calendar growing season drives early senescence \citep{Zani2020}, and proposed that plants adjust mid-season based on a combination of growing season temperature and daylength \citep{Zohner2023}, thus maintaining a consistent thermal growing season. Such studies, however, are based generally on large-scale satellite measurements and small-scale single species `pot' experiments, and contrast with findings from long-term large-scale $CO_2$ enrichment studies \citep{norby2021comment}.
 
 % emwJuly22: This paragraph has a lot of good stuff in it but needs some flow. The first sentence is good, but then you jump to satellites, when instead you should set up spatial scale issues here (or can you hint at it above at all? I pointed out one spot or just the previous sentence with 'pot' effects should do it if you make th connection better for the reader)
-These contrasting results suggest fundamental gaps in our understanding of how early-season events alongside the thermal conditions of the vegetative period shape end-of-season events. While results from satellite-derived metrics of phenology (e.g., using NDVI) show a correlation between the start and end of the season, the signature that is measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely, if ever, have good measures of start and end of season events together. Further, because end-of-season events are often more locally adapted than start-of-season events---with plants using unique photoperiods to cue important events such as budset \citep{bauerle2012photoperiodic,soolanayakanahally2013timing}---these trends may vary across populations \citep{aitken2016}. 
+These contrasting results suggest fundamental gaps in our understanding of how early-season events, and the thermal conditions of the vegetative period, shape end-of-season events. While results from satellite-derived metrics of phenology (e.g., using NDVI) show a correlation between the start and end of the season, the signature that is measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely, if ever, have good measures of start and end of season events together. Further, because end-of-season events are often more locally adapted than start-of-season events---with plants using unique photoperiods to cue important events such as budset \citep{bauerle2012photoperiodic,soolanayakanahally2013timing}---these trends may vary across populations \citep{aitken2016}. 
 % emwJuly22: I think you can delete or move (to discussion) the below sentence. 
 Such population-level studies, however, are based on a very limited number of species \citep{Zeng2024}. 
 % emwJuly22: this does not fully fit or flow in this paragraph for me. I am happy to work on fixing it if you want, let me know. 
@@ -198,7 +198,7 @@ Species generally vary strongly in their start-of-season phenology, with this be
 %emwNov8 -- I don't love the focus on variation ... we do get into species level variation but am not sure we want to ask this as the major question so I rewrote it, but left old text for now. 
 Here, we examine how start-of-season events, using leafout, may affect end-of-season events, using budset, to determine the length of the growing season.
 % In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. 
-Using rarely available plant-scale data---phenological observations over three years from a multi-species common garden study---we test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connect to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. % emwJuly22: last two sentences here need some flow help.
+Using rarely available plant-scale data---phenological observations over three years from a multi-species common garden study---we test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. % emwJuly22: last two sentences here need some flow help.
 
 \section{Results \& Discussion} 
 \subsection{Variation in leafout and budset}
@@ -211,7 +211,7 @@ Spring phenological phases are reported to be more plastic than autumn ones \cit
 
 %emwNov8: Can we put this 3 day number (below paragraph) in context compared to year to year variation? Also, why the grant? Also, we need to test FFD. 
 % emwJuly22: We were supposed to add some climatic information on the four sites and test FFD (frost free days). We should add that to supp and also refer to the sites other than their names (like, 'the site with fewest FFD' or such). Ditto for Weld Hill where mentioned. 
-These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years \citep{Soolanayakanahally2013}, (and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the White Mountains, but these differences were weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one genus (\emph{Populus}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role \citep{Michelson2018}.   
+These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years \citep{soolanayakanahally2013timing}, (and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the White Mountains, but these differences were weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one genus (\emph{Populus}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role \citep{Michelson2018}.   
 
 % OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
 %emwNov8: I did not update this paragraph much. 
@@ -249,11 +249,11 @@ Our results show that there is little advantage from a carbon or primary product
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
 %dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
-This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in suboptimal thermal conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
+This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
 
 %emwNov8: Need to add that we have A LOT more information now from this study to guide future research ... (1) we need to be careful on what species we look at (so NDVI as Zohner uses, will schmeer across this and make understanding it mechanistically harder), (2) we need to figure out what mechanistically controls this [GOOD spot to introduce whether it might be leaf longeivity and also talk about budset vs. other late season events ... though it would be good if we can discuss budset and what it means vs. leaf coloring etc. earlier too]
 % emwJuly22: I would move the below two paragraphs elsewhere (and fix the refs) but they might work better once you move out the first paragraph of these sections. I'd be happy to take a stab at moving things around with your approval. 
- This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see{\citepmckown2014, Vander2016}. Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rhode2011}. Further, most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. 
+ This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see{\citepmckown2014, Vander2016}. Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rohde2011}. Further, most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. 
  
 Of course, budset is just one of many ways that plants begin to transition from growth to dormancy each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{GALLINAT2015}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
  
@@ -261,7 +261,7 @@ Of course, budset is just one of many ways that plants begin to transition from 
 \section{Methods} %emwNov4 -- Skipping!
 \subsubsection{The Common Garden}
 % emwJuly22: do you want to cite Baskin^2 for 'germination protocols.' 
-In 2014-2015, we collected seeds of 18 species woody plants from multiple parent plants at four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we outplanted seedlings to establish the Common garden at Weld Hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and outplanted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). 
+In 2014-2015, we collected seeds of 18 species woody plants from multiple parent plants at four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish the Common garden at Weld Hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). 
 
 Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides} \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses are based on offspring from 1-10 individual parent plants per field site.
 % emwJuly22: Are you sure it's 1-10? One seems low ... I might rephrase as 'based on offspring from xx-yy generally but as low as 1 for [insert specific species]. Also I would ref the table you have for n of each species here, otherwise the numbers just sound low.  I might also mention right here that your stats account for the unbalanced design common to gardens, provenance trials etc.. 
